--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <a href="https://www.Google.com" target="_blank">welcome to google</a>
   <img src="images.jpeg" alt="Description of image" width="300" height="200">
   <img src="https://example.com/dog.jpg" alt="A cute dog" width="300">
-  <img src="pic_trulli.jpg" alt="Italian Trulli">
+  <img src="src/1531895418959.webp" alt="Italian Trulli">
 
 
 
