--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p>Everything that we see and feel around us such as trees, plants, animals, the aroma of flowers, the sweetness of fruit, and any other products that are manufactured by the earth is collectively called Nature. It's a non-returnable blessing to mankind.</p>
   <a href="https://www.Google.com" target="_blank">welcome to google</a>
   <img src="images.jpeg" alt="Description of image" width="300" height="200">
-  <img src="https://example.com/dog.jpg" alt="A cute dog" width="300">
+  <img src="src/any-question-label-template-design-vector.jpg" alt="A cute dog" width="300">
   <img src="src/1531895418959.webp" alt="Italian Trulli">
 
 
